<resources>
    <string name="app_name">Finance Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Финансовый менеджер</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="income">Доходы</string>
    <string name="outlay">Расходы</string>
    <string name="dailyExpense">Дневные расходы</string>
    <string name="statistic">Статистика</string>
    <string name="monthly_income">Месячный доход</string>
    <string name="monthly_outlay">Месячный расход</string>
    <string name="daily_expense">Расходы на сегодня</string>
    <string name="add">Добавить</string>
    <string name="back">Назад</string>
    <string name="amount">Сумма</string>
    <string name="name">Имя</string>
    <string name="description">Комментарии</string>
    <string name="card">Карты</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="nav_category">Категории расхода</string>

</resources>