<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/outlayToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/outlay"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addOutlayTitle"
        android:text="Добавить расход"
        android:textAlignment="center"
        android:textSize="36sp"
        android:layout_marginTop="75dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addOutlayName"
        android:layout_below="@+id/addOutlayTitle"
        android:hint="@string/name"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addOutlayAmount"
        android:layout_below="@+id/addOutlayName"
        android:hint="@string/amount"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:ems="10"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/addOutlayDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_below="@+id/addOutlayAmount"
        android:hint="Комментарии к расходу"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addOutlayDescription"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addOutlayButton"
            android:background="@drawable/outlay_button_style"
            android:textColor="#fff"
            android:textSize="16sp"
            android:text="@string/add"/>
    </LinearLayout>

</RelativeLayout>