<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEFF"
    tools:context=".screens.main.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/monthly_income"
                        android:textSize="12sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/incomeBadge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#fff"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:background="@drawable/income_text"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/monthly_outlay"
                        android:textSize="12sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/outlayBadge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#fff"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:background="@drawable/outlay_text"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/daily_expense"
                        android:textSize="12sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/dailyExpenseBadge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#fff"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:background="@drawable/daily_expense_text"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/incomeButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/income"
                    android:drawableTop="@drawable/growth"
                    android:textColor="#AAF99D"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/income_button" />


                <Button
                    android:id="@+id/outlayButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/outlay"
                    android:drawableTop="@drawable/expense"
                    android:textColor="#FFB5B5"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/outlay_button"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/dailyExpenseButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/daily_expense"
                    android:drawableTop="@drawable/expenses"
                    android:textColor="#FF9393"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/daily_expense_button"/>

                <Button
                    android:id="@+id/statisticButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/statistic"
                    android:drawableTop="@drawable/graph"
                    android:textColor="#90C7F3"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/statistic_button"/>

            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="200dp"-->
<!--                android:orientation="horizontal"-->
<!--                android:weightSum="2"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:paddingRight="10dp">-->

<!--                <Button-->
<!--                    android:id="@+id/cardButton"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:paddingTop="25dp"-->
<!--                    android:text="@string/card"-->
<!--                    android:drawableTop="@drawable/card"-->
<!--                    android:textColor="#DE4A3A"-->
<!--                    android:textSize="24sp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:background="@drawable/card_button"/>-->

<!--            </LinearLayout>-->

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>